fix: better dark mode on maps

--- a/resources/css/maps/leaflet.zoomdisplay.css
+++ b/resources/css/maps/leaflet.zoomdisplay.css
@@ -1,9 +1,8 @@
 .leaflet-control-zoom-display {
-    background-color: rgba(255, 255, 255, 0.7);
-    border-bottom: 1px solid #333;
+    background-color: hsl(var(--b3)/1);
     display: block;
     text-align: center;
     text-decoration: none;
-    color: black;
+    color: hsl(var(--bc)/1);
     padding: 0.15rem 0.35rem;
 }
